--- a/models/facebook-opt/01-base.yaml
+++ b/models/facebook-opt/01-base.yaml
@@ -5,7 +5,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: vllm-facebook-opt-01-base
+  name: vllm-facebook-opt
   namespace: llm-servings
   labels:
     app: vllm
