--- a/models/ibm-granite/01-base.yaml
+++ b/models/ibm-granite/01-base.yaml
@@ -5,7 +5,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: vllm-ibm-granite-01-base
+  name: vllm-ibm-granite
   namespace: llm-servings
   labels:
     app: vllm    
