--- a/models/meta-llama/01-base.yaml
+++ b/models/meta-llama/01-base.yaml
@@ -5,7 +5,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: vllm-meta-llama-01-base
+  name: vllm-meta-llama
   namespace: llm-servings
   labels:
     app: vllm
