--- a/models/facebook-opt/01-base.yaml
+++ b/models/facebook-opt/01-base.yaml
@@ -53,7 +53,7 @@ spec:
             --max-model-len 40k
             --gpu-memory-utilization 0.95
         env:
-        - name: HUGGING_FACE_HUB_TOKEN
+        - name: HF_TOKEN
           valueFrom:
             secretKeyRef:
               name: hf-token-secret
