--- a/kubernetes/secrets/hf_token.yaml
+++ b/kubernetes/secrets/hf_token.yaml
@@ -7,4 +7,4 @@ metadata:
     app: vllm
 type: Opaque
 stringData:
-  token: "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"
+  token: "" # must copy your existing HF token
