set: mml for ibm granite

--- a/models/ibm-granite/01-base.yaml
+++ b/models/ibm-granite/01-base.yaml
@@ -46,6 +46,7 @@ spec:
         --trust-remote-code
         --seed 0
         --gpu-memory-utilization 0.95
+        --max-model-len 44000
 
     env:
     - name: HF_TOKEN
