--- a/models/templates/pod.yaml
+++ b/models/templates/pod.yaml
@@ -1,16 +1,16 @@
-# Base deployment for meta-llama/Llama-3.1-8B
+# Base pod manifest for vLLM deployment
 # Node: SUNY/iBM 1
 # Storage: local
 # Version: v0.1
 apiVersion: v1
 kind: Pod
 metadata:
-  name: meta-llama
-  namespace: llm-servings
+  name: {{ .Values.configs.name }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: vllm
-    model: meta-llama
-    serviceid: "1"
+    model: {{ .Values.configs.name }}
+    serviceid: {{ .Values.serviceid }}
 spec:
   tolerations: # must have this to schedule on GPU nodes
   - key: "level"
@@ -36,16 +36,7 @@ spec:
   - name: vllm-container
     image: vllm/vllm-openai:latest
     command: ["/bin/sh", "-c"]
-    args:
-      - >
-        vllm serve meta-llama/Llama-3.1-8B
-        --host 0.0.0.0
-        --port 8000
-        --tensor-parallel-size 1
-        --no-enable-prefix-caching
-        --trust-remote-code
-        --seed 0
-        --gpu-memory-utilization 0.95
+    args: {{ .Values.configs.serve }}
 
     env:
     - name: HF_TOKEN
