--- a/models/meta-llama/values.yaml
+++ b/models/meta-llama/values.yaml
@@ -14,3 +14,12 @@ configs:
       --trust-remote-code
       --seed 0
       --gpu-memory-utilization 0.95
+
+# gpu configs
+# RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
+gpu:
+  type: "q6000" # must be a5000 or q6000
+
+# storage configs
+storage:
+  type: "local" # must be local or gpfs
