--- a/kubernetes/storage/local-storage.yaml
+++ b/kubernetes/storage/local-storage.yaml
@@ -15,13 +15,13 @@ metadata:
   namespace: llm-servings
 spec:
   capacity:
-    storage: 25Gi
+    storage: 100Gi
   accessModes:
-    - ReadWriteOnce # This volume can be used by only one pod at a time
+    - ReadWriteOnce
   storageClassName: vllm-local
-  persistentVolumeReclaimPolicy: Retain # Data is preserved even if the PVC is deleted
+  persistentVolumeReclaimPolicy: Retain # data is preserved even if the PVC is deleted
   hostPath:
-    path: "/mnt/vllm" # Path on the node's filesystem
+    path: "/mnt/vllm" # path on the node's filesystem
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -39,13 +39,13 @@ metadata:
   namespace: llm-servings
 spec:
   capacity:
-    storage: 25Gi
+    storage: 100Gi
   accessModes:
-    - ReadWriteOnce # This volume can be used by only one pod at a time
+    - ReadWriteOnce
   storageClassName: vllm-local
-  persistentVolumeReclaimPolicy: Retain # Data is preserved even if the PVC is deleted
+  persistentVolumeReclaimPolicy: Retain # data is preserved even if the PVC is deleted
   hostPath:
-    path: "/mnt/vllm" # Path on the node's filesystem
+    path: "/mnt/vllm" # path on the node's filesystem
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -54,18 +54,3 @@ spec:
               operator: In
               values:
                 - "sunyibm2.fsl.cs.sunysb.edu"
----
-# Persistent Volume Claim
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: vllm-local-pvc
-  namespace: llm-servings
-spec:
-  accessModes:
-    - ReadWriteOnce # Must match the PV's access mode
-  resources:
-    requests:
-      storage: 10Gi # Must be less than or equal to the PV's capacity
-  volumeName: vllm-local-pv
-  storageClassName: vllm-local
