--- a/models/templates/pod.yaml
+++ b/models/templates/pod.yaml
@@ -29,7 +29,7 @@ spec:
   - name: cache-volume
     persistentVolumeClaim:
       {{- if eq .Values.storage.type "local" }}
-      claimName: vllm-local-pvc
+      claimName: {{ print .Values.configs.name "-local-pvc" }}
       {{- else if eq .Values.storage.type "gpfs" }}
       claimName: vllm-pvc
       {{- else }}
