--- a/models/meta-llama/values.yaml
+++ b/models/meta-llama/values.yaml
@@ -6,7 +6,7 @@ configs:
   name: meta-llama
   serve:
     - >
-      vllm serve meta-llama/Llama-3.1-8B
+      vllm serve meta-llama/Llama-3.1-70B
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
@@ -14,6 +14,7 @@ configs:
       --trust-remote-code
       --seed 0
       --gpu-memory-utilization 0.9
+      --max-model-len 44000
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
