--- a/models/meta-llama/values.yaml
+++ b/models/meta-llama/values.yaml
@@ -14,7 +14,8 @@ configs:
       --trust-remote-code
       --seed 0
       --gpu-memory-utilization 0.9
-      --max-model-len 44000
+      --max-model-len 36000
+      --cpu-offload-gb 5
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
