--- a/models/openai-gpt/values.yaml
+++ b/models/openai-gpt/values.yaml
@@ -3,10 +3,10 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: qwen-qwen
+  name: openai-gpt
   serve:
     - >
-      vllm serve Qwen/Qwen2.5-1.5B-Instruct
+      vllm serve openai/gpt-oss-20b
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
