--- a/models/qwen-qwen3/values.yaml
+++ b/models/qwen-qwen3/values.yaml
@@ -3,10 +3,10 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: deepseek-v2.5
+  name: qwen-qwen3
   serve:
     - >
-      vllm serve deepseek-ai/DeepSeek-V2.5
+      vllm serve Qwen/Qwen3-14B
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
@@ -14,7 +14,6 @@ configs:
       --trust-remote-code
       --seed 0
       --gpu-memory-utilization 0.9
-      --max-model-len 44000
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
