--- a/models/nvidia-nemotron/values.yaml
+++ b/models/nvidia-nemotron/values.yaml
@@ -3,7 +3,7 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: qwen-qwen2
+  name: nvidia-nemotron
   serve:
     - >
       vllm serve nvidia/NVIDIA-Nemotron-3-Nano-30B-A3B-BF16
@@ -15,6 +15,7 @@ configs:
       --seed 0
       --gpu-memory-utilization 0.9
       --max-model-len 36000
+      --cpu-offload-gb 2
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
