--- a/models/google/gemma-2-9b.yaml
+++ b/models/google/gemma-2-9b.yaml
@@ -3,10 +3,10 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: qwen-qwen3
+  name: google-gemma-2-9b
   serve:
     - >
-      vllm serve Qwen/Qwen3-14B
+      vllm serve google/gemma-2-9b
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
