--- a/models/google/gemma-2b.yaml
+++ b/models/google/gemma-2b.yaml
@@ -3,10 +3,10 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: facebook-opt
+  name: google-gemma-2b
   serve:
     - >
-      vllm serve facebook/opt-125m
+      vllm serve google/gemma-2b
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
