--- a/models/ibm-granite/granite-3.3-8b.yaml
+++ b/models/ibm-granite/granite-3.3-8b.yaml
@@ -3,10 +3,10 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: alibaba-apsara
+  name: ibm-granite-3.3-8b
   serve:
     - >
-      vllm serve Alibaba-Apsara/DASD-4B-Thinking
+      vllm serve ibm-granite/granite-3.3-8b-instruct
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
@@ -14,6 +14,7 @@ configs:
       --trust-remote-code
       --seed 0
       --gpu-memory-utilization 0.95
+      --max-model-len ??
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
