--- a/models/openai/circuit.yaml
+++ b/models/openai/circuit.yaml
@@ -3,10 +3,10 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: liquidai-lfm
+  name: openai-circuit
   serve:
     - >
-      vllm serve LiquidAI/LFM2.5-1.2B-Thinking
+      vllm serve openai/circuit-sparsity
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
