--- a/models/facebook/opt-350m.yaml
+++ b/models/facebook/opt-350m.yaml
@@ -3,18 +3,17 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: google-gemma-2-9b
+  name: facebook-opt-350m
   serve:
     - >
-      vllm serve google/gemma-2-9b
+      vllm serve facebook/opt-350m
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
       --no-enable-prefix-caching
       --trust-remote-code
       --seed 0
-      --gpu-memory-utilization 0.95
-      --max-model-len 36000
+      --gpu-memory-utilization 0.9
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
