--- a/models/ibm-granite/granite-3.3-8b.yaml
+++ b/models/ibm-granite/granite-3.3-8b.yaml
@@ -3,7 +3,7 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: ibm-granite-3.3-8b
+  name: ibm-granite-33-8b
   serve:
     - >
       vllm serve ibm-granite/granite-3.3-8b-instruct
@@ -13,8 +13,8 @@ configs:
       --no-enable-prefix-caching
       --trust-remote-code
       --seed 0
-      --gpu-memory-utilization 0.95
-      --max-model-len ??
+      --gpu-memory-utilization 0.9
+      --max-model-len 8192
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
