--- a/models/qwen/qwen3-8b.yaml
+++ b/models/qwen/qwen3-8b.yaml
@@ -13,8 +13,8 @@ configs:
       --no-enable-prefix-caching
       --trust-remote-code
       --seed 0
-      --gpu-memory-utilization 0.95
-      --max-model-len ??
+      --gpu-memory-utilization 0.9
+      --max-model-len 8192
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
