--- a/kubernetes/monitoring/manifests/alertmanager-alertmanager.yaml
+++ b/kubernetes/monitoring/manifests/alertmanager-alertmanager.yaml
@@ -10,6 +10,8 @@ metadata:
   name: main
   namespace: monitoring
 spec:
+  alertmanagerConfigSelector: {}
+  alertmanagerConfigNamespaceSelector: {}
   dnsPolicy: Default
   image: quay.io/prometheus/alertmanager:v0.28.0
   nodeSelector:
@@ -21,7 +23,7 @@ spec:
       app.kubernetes.io/name: alertmanager
       app.kubernetes.io/part-of: kube-prometheus
       app.kubernetes.io/version: 0.28.0
-  replicas: 3
+  replicas: 1
   resources:
     limits:
       cpu: 100m
