--- a/kubernetes/monitoring/gpu-alert-rules.yaml
+++ b/kubernetes/monitoring/gpu-alert-rules.yaml
@@ -9,9 +9,9 @@ spec:
     rules:
     - alert: NodeGPUFreeChanged
       expr: changes(node:gpu_free[5m]) > 0
-      for: 0s
+      for: 5s
       labels:
-        severity: info
+        severity: warning
       annotations:
         summary: "GPU availability changed on {{ $labels.node }}"
         description: |
