--- a/kubernetes/monitoring/gpu-alert-rules.yaml
+++ b/kubernetes/monitoring/gpu-alert-rules.yaml
@@ -8,21 +8,20 @@ spec:
   - name: GPUStatus
     rules:
     - alert: NodeGPUFreeChanged
-      expr: changes(node:gpu_free[5m]) > 0
-      for: 5s
+      expr: changes(node:gpu_free[30s]) > 0
       labels:
         severity: warning
       annotations:
         summary: "GPU availability changed on {{ $labels.node }}"
         description: |
           GPU availability changed on node {{ $labels.node }}.
-          {{ $q := query (printf "node:gpu_free{node=\"%s\"}" $labels.node) }}
-          {{ if gt (len $q) 0 }}
+          {{- $q := query (printf "node:gpu_free{node=\"%s\"}" $labels.node) }}
+          {{- if gt (len $q) 0 }}
           Free GPUs: {{ printf "%.0f" (index $q 0).Value }}
-          {{ $qt := query (printf "kube_node_status_capacity{resource=\"nvidia_com_gpu\", node=\"%s\"}" $labels.node) }}
-          {{ if gt (len $qt) 0 }}
+          {{- $qt := query (printf "kube_node_status_capacity{resource=\"nvidia_com_gpu\", node=\"%s\"}" $labels.node) }}
+          {{- if gt (len $qt) 0 }}
           Total GPUs: {{ printf "%.0f" (index $qt 0).Value }}
-          {{ end }}
-          {{ else }}
+          {{- end }}
+          {{- else }}
           Free GPUs: unknown
-          {{ end }}
+          {{- end }}
