--- a/kubernetes/monitoring/manifests/alertmanager-config.yaml
+++ b/kubernetes/monitoring/manifests/alertmanager-config.yaml
@@ -12,7 +12,7 @@ spec:
     groupBy: ["node"]
     groupWait: 0s
     groupInterval: 1s
-    repeatInterval: 1h
+    repeatInterval: 1m
 
   receivers:
   - name: slack-gpu
