change to utc time and compute timestamps in collect script

--- a/models/templates/pod.yaml
+++ b/models/templates/pod.yaml
@@ -54,6 +54,8 @@ spec:
         secretKeyRef:
           name: hf-token-secret
           key: token
+    - name: TZ
+      value: UTC
 
     ports:
     - containerPort: 8000
