--- a/models/facebook/opt-1.3b.yaml
+++ b/models/facebook/opt-1.3b.yaml
@@ -6,10 +6,10 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: facebook-opt-125m
+  name: facebook-opt-1.3b
   serve:
     - >
-      vllm serve facebook/opt-125m
+      vllm serve facebook/opt-1.3b
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
