--- a/models/qwen/14b.yaml
+++ b/models/qwen/14b.yaml
@@ -1,24 +1,28 @@
+## NOTE: This file is template for model values configuration.
+## Please create a copy of this file and fill in the values accordingly.
+
 # namespace configs
 namespace: llm-servings
 
 # model configs
 configs:
-  name: ibm-granite-40-h-tiny
+  name: qwen3-14B
   serve:
     - >
-      vllm serve ibm-granite/granite-4.0-h-tiny
+      vllm serve Qwen/Qwen3-14B
       --host 0.0.0.0
       --port 8000
-      --tensor-parallel-size 1
-      --no-enable-prefix-caching
-      --trust-remote-code
+      --tensor-parallel-size 2
+      --enable-prefix-caching
       --seed 0
       --gpu-memory-utilization 0.9
+      --max-num-seqs 1
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
 gpu:
   type: "q6000" # must be a5000 or q6000
+  count: 2   # adjust this based on tensor-parallel-size
 
 # storage configs
 storage:
