--- a/models/qwen/2b.yaml
+++ b/models/qwen/2b.yaml
@@ -1,25 +1,27 @@
+## NOTE: This file is template for model values configuration.
+## Please create a copy of this file and fill in the values accordingly.
+
 # namespace configs
 namespace: llm-servings
 
 # model configs
 configs:
-  name: meta-llama-31-8b
+  name: qwen3-2B
   serve:
     - >
-      vllm serve meta-llama/Llama-3.1-8B-Instruct
+      vllm serve Qwen/Qwen3-1.7B
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
-      --no-enable-prefix-caching
-      --trust-remote-code
+      --enable-prefix-caching
       --seed 0
       --gpu-memory-utilization 0.9
-      --max-model-len 36000
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
 gpu:
   type: "q6000" # must be a5000 or q6000
+  count: 1   # adjust this based on tensor-parallel-size
 
 # storage configs
 storage:
