--- a/models/qwen/32b.yaml
+++ b/models/qwen/32b.yaml
@@ -1,32 +1,29 @@
+## NOTE: This file is template for model values configuration.
+## Please create a copy of this file and fill in the values accordingly.
+
 # namespace configs
 namespace: llm-servings
 
 # model configs
 configs:
-  name: google-gemma-2-9b
-  gpus: 4
+  name: qwen3-32B
   serve:
     - >
-      vllm serve google/gemma-2-9b
+      vllm serve Qwen/Qwen3-32B
       --host 0.0.0.0
       --port 8000
-      --tensor-parallel-size 4
-      --max-num-seqs 1
-      --no-enable-prefix-caching
-      --trust-remote-code
+      --tensor-parallel-size 3
+      --enable-prefix-caching
       --seed 0
       --gpu-memory-utilization 0.9
+      --max-num-seqs 1
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
 gpu:
   type: "q6000" # must be a5000 or q6000
+  count: 3   # adjust this based on tensor-parallel-size
 
 # storage configs
 storage:
   type: "local" # must be local or gpfs
-
-# customized
-initdelay: 300
-period: 300
-
