--- a/models/values.yaml
+++ b/models/values.yaml
@@ -13,17 +13,25 @@ configs:
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
-      --no-enable-prefix-caching
-      --trust-remote-code
+      --enable-prefix-caching
       --seed 0
-      --gpu-memory-utilization 0.95
+      --gpu-memory-utilization 0.9
       --max-model-len ??
 
 # gpu configs
 # RTX A5000 with 24.5 GB of VRAM (1) / Quadro 6000 with 24.5 GB of VRAM (2)
 gpu:
   type: "??" # must be a5000 or q6000
+  count: 1   # adjust this based on tensor-parallel-size
 
 # storage configs
 storage:
   type: "??" # must be local or gpfs
+
+# Kubernetes liveness and readiness probes
+liveprobe:
+  initdelay: 300
+  period: 300
+readyprobe:
+  initdelay: 300
+  period: 300
