--- a/models/meta/llama-3.2-3b.yaml
+++ b/models/meta/llama-3.2-3b.yaml
@@ -6,7 +6,7 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: meta-llama-32-3B-Instruct
+  name: meta-llama-32-3b
   serve:
     - >
       vllm serve meta-llama/Llama-3.2-3B-Instruct
