--- a/models/qwen/4b.yaml
+++ b/models/qwen/4b.yaml
@@ -6,7 +6,7 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: qwen3-4B
+  name: qwen3-4b
   serve:
     - >
       vllm serve Qwen/Qwen3-4B
