--- a/models/qwen/8b.yaml
+++ b/models/qwen/8b.yaml
@@ -6,7 +6,7 @@ namespace: llm-servings
 
 # model configs
 configs:
-  name: qwen3-8B
+  name: qwen3-8b
   serve:
     - >
       vllm serve Qwen/Qwen3-8B
