--- a/models/deepseek/14b.yaml
+++ b/models/deepseek/14b.yaml
@@ -28,3 +28,11 @@ gpu:
 # storage configs
 storage:
   type: "local" # must be local or gpfs
+
+# Kubernetes liveness and readiness probes
+liveprobe:
+  initdelay: 300
+  period: 300
+readyprobe:
+  initdelay: 300
+  period: 300
