--- a/models/templates/pod.yaml
+++ b/models/templates/pod.yaml
@@ -40,12 +40,18 @@ spec:
     {{- else }}
     {{ fail "Invalid storage type value. Use 'local' or 'gpfs'." }}
     {{- end }}
+  {{- if .Values.configs.lmcache.enable }}
+  - name: lmcache-config
+    configMap:
+      name: {{ .Values.configs.name }}-lmcache-config
+  {{- end }}
 
   containers:
   - name: vllm-container
     image: vllm/vllm-openai:v0.15.0
     command: ["/bin/sh", "-c"]
-    args: {{ .Values.configs.serve }}
+    args:
+    {{- toYaml .Values.configs.serve | nindent 6 }}
 
     env:
     - name: HF_TOKEN
@@ -55,6 +61,12 @@ spec:
           key: token
     - name: TZ
       value: UTC
+    {{- if .Values.configs.lmcache.enable }}
+    - name: LMCACHE_USE_EXPERIMENTAL
+      value: "True"
+    - name: LMCACHE_CONFIG_FILE
+      value: "/etc/lmcache/lmcache.yaml"
+    {{- end }}
 
     ports:
     - containerPort: 8000
@@ -74,6 +86,11 @@ spec:
       name: shm
     - mountPath: /root/.cache/huggingface
       name: cache-volume
+    {{- if .Values.configs.lmcache.enable }}
+    - name: lmcache-config
+      mountPath: /etc/lmcache
+      readOnly: true
+    {{- end }}
 
     livenessProbe:
       httpGet:
