--- a/models/templates/configmap.yaml
+++ b/models/templates/configmap.yaml
@@ -1,6 +1,5 @@
 ---
-{{ if .Values.configs.lmcache.enable }}
-{{ if eq .Values.configs.lmcache.cache_type "local_storage" }}
+{{- if .Values.configs.lmcache.enable }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -10,8 +9,43 @@ data:
   lmcache.yaml: |
     chunk_size: 256
     local_cpu: false
-    max_local_cpu_size: 5.0
-    local_disk: "file:///mnt/lmcache"
+
+{{- if eq .Values.configs.lmcache.cache_type "local_storage" }}
+    local_disk: "file:///mnt/localstorage/cache"
     max_local_disk_size: 5.0
-{{ end }}
-{{ end }}
+    max_local_cpu_size: 5.0
+{{- end }}
+
+{{- if eq .Values.configs.lmcache.cache_type "gds" }}
+    gds_path: "/mnt/gds/cache"
+    cufile_buffer_size: 8192
+{{- end }}
+
+{{- if eq .Values.configs.lmcache.cache_type "nixl_posix" }}
+    nixl_buffer_size: 1073741824 # 1GB
+    nixl_buffer_device: cpu
+    extra_config:
+      enable_nixl_storage: true
+      nixl_backend: POSIX
+      nixl_pool_size: 64
+      nixl_path: /mnt/nixl/cache/posix
+      use_direct_io: true
+      nixl_backend_params:
+        use_uring: "true"
+{{- end }}
+
+{{- if eq .Values.configs.lmcache.cache_type "nixl_gds" }}
+    nixl_buffer_size: 1073741824 # 1GB
+    nixl_buffer_device: cuda
+    extra_config:
+      enable_nixl_storage: true
+      nixl_backend: GDS
+      nixl_pool_size: 64
+      nixl_path: /mnt/nixl/cache/gds
+      use_direct_io: true
+      nixl_backend_params:
+        cufile_buffer_size: 8192
+        use_compat_mode: "false"
+{{- end }}
+
+{{- end }}
